// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractOverview should render contracts-table 1`] = `
<contraxt-overview
  overviewStore={[Function Object]}
  router={[Function _Router]}
>
  <nx-error
    class="nx-error--message"
    id="nx-error-1"
    role="alert"
  >
    <nx-message
      class="context-error"
      context="error"
    >
      <nx-icon
        aria-hidden="true"
        class="nx-message__icon nx-icon--s"
        data-nx-icon-name="exclamation-triangle"
        size="s"
      >
        <svg
          height="1em"
          version="1.1"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
            id="Exclamation-triangle-icon"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M12,2 C12.3955786,2 12.7611083,2.21813636 12.9588976,2.57223923 L22.851658,20.2832823 C23.0494473,20.6373852 23.0494473,21.0736579 22.851658,21.4277608 C22.6538687,21.7818636 22.288339,22 21.8927604,22 L2.10723959,22 C1.71166099,22 1.34613128,21.7818636 1.14834198,21.4277608 C0.950552674,21.0736579 0.950552674,20.6373852 1.14834198,20.2832823 L11.0411024,2.57223923 C11.2388917,2.21813636 11.6044214,2 12,2 Z M12.01,17 C11.314102,17 10.75,17.583074 10.75,18.3023765 C10.75,19.0216791 11.314102,19.6047531 12.01,19.6047531 C12.705898,19.6047531 13.27,19.0216791 13.27,18.3023765 C13.27,17.583074 12.705898,17 12.01,17 Z M12.01,7.5 C11.314102,7.5 10.75,7.958913 10.75,8.525 L10.75,8.525 L10.75,14.675 C10.75,15.2411075 11.314102,15.7 12.01,15.7 C12.705898,15.7 13.27,15.2411075 13.27,14.675 L13.27,14.675 L13.27,8.525 C13.27,7.958913 12.705898,7.5 12.01,7.5 Z"
              fill-rule="nonzero"
              id="Combined-Shape"
            />
          </g>
        </svg>
      </nx-icon>
      <div
        class="nx-message__content"
      >
        An error occurred
      </div>
    </nx-message>
  </nx-error><div
    class="spinner-outlet"
  >
  </div><contract-table>
    <nx-formfield
      class="nx-formfield--type-nx-input nx-formfield"
    >
      <div
        class="nx-formfield__wrapper"
      >
        <div
          class="nx-formfield__row"
        >
          <div
            class="nx-formfield__flexfield"
          >
            <div
              class="nx-formfield__input-container"
            >
              <div
                class="nx-formfield__prefix"
              >
                <span
                  nxformfieldprefix=""
                >
                  <nx-icon
                    class="nx-icon--s search"
                    data-nx-icon-name="search"
                    name="search"
                    size="s"
                  />
                </span>
              </div>
              <div
                class="nx-formfield__input"
              >
                <span
                  class="nx-formfield__label-holder"
                >
                  <label
                    aria-owns="nx-input-0"
                    class="nx-formfield__label"
                    for="nx-input-0"
                    id="nx-formfield-label-0"
                  >
                    <span>
                    </span>
                  </label>
                </span>
                <div
                  class="nx-formfield__tooltip"
                  style="user-select: none; webkit-user-select: none;"
                >
                  <input
                    aria-invalid="false"
                    aria-required="false"
                    class="cdk-text-field-autofill-monitored c-input nx-input ng-untouched ng-pristine ng-valid"
                    id="nx-input-0"
                    nxinput=""
                    type="text"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nx-formfield>
    <div
      class="scroll-container"
    >
      <table
        class="nx-table nx-table--scrollable"
        nxtable=""
      >
        <thead>
          <tr
            aria-selected="false"
            class="nx-table-row"
            nxtablerow=""
          >
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Vertragsnummer
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Vorname
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Nachname
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Geburtsdatum
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Vertragsbeginn
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Vertragsende
            </th>
            <th
              class="nx-header-cell"
              nxheadercell=""
            >
              Aktion
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              1/2345678/9
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Homer
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Simpson
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              May 16, 1961
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Jan 1, 2024
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              -
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              <nx-context-menu>
              </nx-context-menu>
              <button
                aria-disabled="false"
                aria-haspopup="true"
                aria-label="Open menu"
                class="nx-icon-button nx-button--tertiary nx-button--small"
                nxiconbutton="tertiary small"
                type="button"
              >
                <span
                  class="nx-button__content-wrapper"
                >
                  <span
                    class="nx-button__content"
                  >
                    <nx-icon
                      aria-hidden="true"
                      class="nx-icon--auto"
                      data-nx-icon-name="ellipsis-h"
                      name="ellipsis-h"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
                          fill="currentColor"
                        />
                        <path
                          d="M14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12Z"
                          fill="currentColor"
                        />
                        <path
                          d="M14 18C14 19.1046 13.1046 20 12 20C10.8954 20 10 19.1046 10 18C10 16.8954 10.8954 16 12 16C13.1046 16 14 16.8954 14 18Z"
                          fill="currentColor"
                        />
                      </svg>
                    </nx-icon>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              1/2345678/8
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Bart
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Simpson
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Aug 21, 1995
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              Feb 1, 2024
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              -
            </td>
            <td
              class="nx-table-cell"
              nxtablecell=""
            >
              <nx-context-menu>
              </nx-context-menu>
              <button
                aria-disabled="false"
                aria-haspopup="true"
                aria-label="Open menu"
                class="nx-icon-button nx-button--tertiary nx-button--small"
                nxiconbutton="tertiary small"
                type="button"
              >
                <span
                  class="nx-button__content-wrapper"
                >
                  <span
                    class="nx-button__content"
                  >
                    <nx-icon
                      aria-hidden="true"
                      class="nx-icon--auto"
                      data-nx-icon-name="ellipsis-h"
                      name="ellipsis-h"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
                          fill="currentColor"
                        />
                        <path
                          d="M14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12Z"
                          fill="currentColor"
                        />
                        <path
                          d="M14 18C14 19.1046 13.1046 20 12 20C10.8954 20 10 19.1046 10 18C10 16.8954 10.8954 16 12 16C13.1046 16 14 16.8954 14 18Z"
                          fill="currentColor"
                        />
                      </svg>
                    </nx-icon>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </contract-table>
</contraxt-overview>
`;

exports[`ContractOverview should render error message 1`] = `
<contraxt-overview
  overviewStore={[Function Object]}
  router={[Function _Router]}
>
  <nx-error
    class="nx-error--message"
    id="nx-error-0"
    role="alert"
  >
    <nx-message
      class="context-error"
      context="error"
    >
      <nx-icon
        aria-hidden="true"
        class="nx-message__icon nx-icon--s"
        data-nx-icon-name="exclamation-triangle"
        size="s"
      >
        <svg
          height="1em"
          version="1.1"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
            id="Exclamation-triangle-icon"
            stroke="none"
            stroke-width="1"
          >
            <path
              d="M12,2 C12.3955786,2 12.7611083,2.21813636 12.9588976,2.57223923 L22.851658,20.2832823 C23.0494473,20.6373852 23.0494473,21.0736579 22.851658,21.4277608 C22.6538687,21.7818636 22.288339,22 21.8927604,22 L2.10723959,22 C1.71166099,22 1.34613128,21.7818636 1.14834198,21.4277608 C0.950552674,21.0736579 0.950552674,20.6373852 1.14834198,20.2832823 L11.0411024,2.57223923 C11.2388917,2.21813636 11.6044214,2 12,2 Z M12.01,17 C11.314102,17 10.75,17.583074 10.75,18.3023765 C10.75,19.0216791 11.314102,19.6047531 12.01,19.6047531 C12.705898,19.6047531 13.27,19.0216791 13.27,18.3023765 C13.27,17.583074 12.705898,17 12.01,17 Z M12.01,7.5 C11.314102,7.5 10.75,7.958913 10.75,8.525 L10.75,8.525 L10.75,14.675 C10.75,15.2411075 11.314102,15.7 12.01,15.7 C12.705898,15.7 13.27,15.2411075 13.27,14.675 L13.27,14.675 L13.27,8.525 C13.27,7.958913 12.705898,7.5 12.01,7.5 Z"
              fill-rule="nonzero"
              id="Combined-Shape"
            />
          </g>
        </svg>
      </nx-icon>
      <div
        class="nx-message__content"
      >
        An error occurred
      </div>
    </nx-message>
  </nx-error><div
    class="spinner-outlet"
  >
  </div>
</contraxt-overview>
`;

exports[`ContractOverview should render loading-spinner 1`] = `
<contraxt-overview
  overviewStore={[Function Object]}
  router={[Function _Router]}
>
  <div
    class="spinner-outlet"
  >
    <nx-spinner
      aria-busy="true"
      aria-live="assertive"
      class="nx-spinner--medium"
      role="status"
      size="medium"
    >
      <div
        class="nx-spinner__spin-block"
      >
        <div
          class="nx-spinner__edge-left"
        />
        <div
          class="nx-spinner__edge-right"
        />
      </div>
    </nx-spinner>
  </div>
</contraxt-overview>
`;
